fix: grid spacing

--- a/components/Grid/Grid.module.scss
+++ b/components/Grid/Grid.module.scss
@@ -1,5 +1,30 @@
-@use "../Stack/Stack.module.scss";
 @import "../../theme";
+
+$gap: px-to-rem(15);
+$gap-padded: $gap * 2;
+
+@mixin stack-horizontal {
+  flex-direction: row;
+  margin: 0 ($gap * -1 / 2);
+
+  &.padded {
+    margin: 0 ($gap-padded * -1 / 2);
+  }
+}
+
+.container {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0 ($gap * -1 / 2);
+
+  &.padded {
+    margin: 0 ($gap-padded * -1 / 2);
+  }
+}
+
+@mixin stack-vertical {
+  flex-direction: column;
+}
 
 @mixin grid-item-sizes {
   &-100 {
@@ -21,6 +46,11 @@
 
 .item {
   flex: 1 1;
+  padding: 0 ($gap / 2);
+
+  &.padded {
+    padding: 0 $gap-padded / 2;
+  }
 
   @media #{$mq-mobile} {
     &.mobile {
